--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,5 @@
     <string name="stats">STATS</string>
     <string name="_0">0%</string>
     <string name="success">Success %</string>
-    <string name="_0">0%</string>
-    <string name="success">Success %</string>
+    <string name="init_0">0</string>
 </resources>
